fix(tickets): widen sort-field select to prevent text truncation

--- a/src/app/features/tickets/tickets.component.scss
+++ b/src/app/features/tickets/tickets.component.scss
@@ -6,6 +6,10 @@
     width: auto;
 }
 
+#sort-field {
+    min-width: 10rem;
+}
+
 .dialog-form {
     display: flex;
     flex-direction: column;
